--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TodoList</title>
-    <link rel="stylesheet" href="/src/output.css" />
+    <link rel="stylesheet" href="src/output.css" />
   </head>
   <body class="bg-gray-900 text-gray-100">
     <main class="mx-5">
